--- a/index.html
+++ b/index.html
@@ -1,1 +1,140 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Home</title>
+    </head>
+<body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="#">About</a>
+        <a href="media.html">Media</a>
+    </nav>
+<!-- Five from Basic HTML-->
+    <html><www class="mycellessentials com"></www></html>
+
+<head>My Cell Essentials</head>
+<a href="https://mycellessentials.com">mycellessentials.com</a>
+
+<title>OPC Factor</title>
+<h1>OPC Factor</h1>
+
+<p><abbr>OPC</abbr><em>(Oligomeric Proenthocyanidins)</em> Factor is a superantioxidant that includes pine bark extract, grape seed extract, and bioflavinoids. 
+    It also includes all the <i>vitamins and minerals</i> that you need on a daily basis. Below you will find all the information you need
+    to get started on this product.
+</p>
+<!--heading of the page-->
+<!-- using listed an unlisted to differentiate between instructions and benefits.-->
+<h2>Benefits of OPC Factor</h2>
+<ul>
+    <li>More Energy</li>
+    <li>Better overall health</li>
+    <li>97% bio-availability</li> <i>unlike pills which have only 15-20% bio-availibility</i>
+</ul>
+<h2>Directions for use</h2>
+<ol>
+    <li>empty packet into glass</li>
+    <li>mix with 5 ounces of water <i>(or favorite drink)</i></li>
+    <li>wait 30 seconds for it to effervesce</li>
+</ol>
+
+<!-- Five from Images and audio/vido -->
+<!-- created the pictures with different widege percentages to give dynamic to the page-->
+<picture>
+<img src="grapes.jpeg" alt="grapes" width="40%">
+<figcapition>grapes</figcapition>
+<img src="health.jpeg" alt="health" width="50%">
+<figcaption>Health</figcaption>
+
+
+<source><pexels class="com"> <cite> <a href="https://www.pexels.com">www.pexels.com</a> </cite>
+
+<!-- This will attract attention for viewers-->
+<h4><u><em></em>Important</u>OPC Factor assault on free radicals</h4></em>
+
+
+</picture>
+
+
+
+
+
+
+
+
+    <!---
+<h1>Why You Should Stop ‘Gamifying’ Your Health and Fitness</h1>
+<h4>You don't need to chase a fake goal to be able to chase a real goal.</h4>
+<p>By <b>Beth Skwarecki</b></p>
+<img src="fitness.jpeg.jpg" width="80%"> a
+<p>Whenever there’s a task you don’t want to do, there’s a guarnteed way to feel worse about it: Just add a whole layer of guilt and disappointment on top. Streaks that you’ll inevitably break, badges you don’t care about, check-in notifications that bug you when you were just trying to relax. Ahh, gamification.</p>
+<p>Before we talk about all the reasons gamification is bullshit, let’s talk about why games work the way they do. In a roleplaying game, you earn “experience points” as a metaphor for real-life experience. You earn fake money because it’s meant to mimic the concept of real-life money. You’re given a quest because, in real life, people work hard in pursuit of goals. Games have these metrics and structures because the game is trying to imitate real life.</p>
+
+<h3>Related Stories</h3>
+<ul>
+    <li>You Should Join a Local ‘Maker Space’ If You’re a DIYer
+    </li>
+</li>
+<li>Why You Should Stop ‘Gamifying’ Your Health and Fitness</li>
+<li>This Is the Most Common New Year's Resolution Mistake</li></ul>
+
+<p>Real life doesn’t require fake metrics. You don’t need to rack up XP, because you’re gaining actual experience. You don’t need a fake quest, because you’re on a real quest. Whether that’s deadlifting 500 pounds or seeing better cholesterol numbers the next time you go to the doctor, your health habits have real-world rewards and consequences.</p>
+
+<p>So let’s look at some of the ways gamification of health habits can backfire. Lifehacker staff writer Stephen Johnson explains the most common game tactics here, and that’s worth a read if you haven’t checked it out yet. Gamification is usually just manipulation, and it often has more downsides than benefits.</p>
+
+<p>Instead of chasing game metrics, what if you put your attention on real life outcomes of your habits? Here’s what I mean.</p>
+
+
+
+
+
+
+
+   
+
+</footer>
+<p> ©Drew All Rights Reserved</footer></p>
+  <header>
+        <h1>This is the main headline</h1>
+
+    <button>Click!</button>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ONH-pxBMJu4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560 height="315></iframe>
+    <ul>
+        <li>Idaho
+            <li>Oregon
+                <li>California</li>
+            </li>
+        </li>
+    </ul>
+
+    <ol>
+        <li>Idaho</li>
+            <li>Oregon</li>
+                <li>California</li>
+            </li></li>
+    </ol>
+    <p>Millie said,<q>HTML is the backbone of the web</q></p>
+
+    <a href="https://www.w3schools.com/">visit w3schools.com</a>
+   
+    <img src="sunset.jpg" alt="sunsetand birds" width="40%" height="30%"> 
+
+    <audio controls>
+        <source src="Ice Song.mp3">
+    </audio>
+
+    <p>
+        <video controls>
+    <source src="movie.mp4">
+</video>
+</p>
+
+
 <h1>Hello World!</h1>
+<h2>This is a second headline</h2>
+<h6> this is the smallest headline</h6>
+<p>Lorem Ipsum</p> <br> of the printing industry <br>it has survived
+<p>This is an <i>italic</i></p>
+
+</body>
+</html>I used the following code using javascript-->
