--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="#">About</a>
+        <a href="about.html">About</a>
         <a href="media.html">Media</a>
+        <a href="tags.html">tags</a>
+        <a href="nested.html">nested</a>
+        
     </nav>
+
+    <main>
 <!-- Five from Basic HTML-->
     <html><www class="mycellessentials com"></www></html>
 
@@ -53,12 +58,48 @@
 
 
 </picture>
+</body>
+</main>
+
+<button onclick="window.location.href='https://www.espn.com/';">ESPN</button>
+
+<form>
+    <label>Name:</label>
+    <input type="text" placeholder="Last Name, First Name">
+    <input type="submit" value="Submit">
+</form>
+
+<p>
+    <form>
+            <label>Select your option</label>
+            <input type="radio" id="dog" name="pets" value="Dog">
+            <label for="dog">Dog</label>
+
+            <input type="radio" id="cat" name="pets" value="cat">
+            <label for="cat">Cat</label>
+
+            <input  type="submit" value="Submit">
+
+    </form>
+
+    <table>
+        <tr>
+            <th>Course</th>
+            <tr>
+                <td>Media Writing</td>
+                <td>10:30am</td>
+            </tr>
+            <th>Time</th>
+        </tr>
+        <tr>
+            <td>Web Design</td>
+            <td>1:30pm</td>
+
+        </tr>
+         </table>
 
 
-
-
-
-
+</p>
 
 
     <!---
@@ -138,3 +179,7 @@
 
 </body>
 </html>I used the following code using javascript-->
+
+
+<button onclick="window.location.href='https://mycellessentials.com/';">My Website</button>
+
