--- a/nested.html
+++ b/nested.html
@@ -50,3 +50,8 @@
     <p>Millie said,<q>HTML is the backbone of the web</q></p>
 
     <a href="https://www.w3schools.com/">visit w3schools.com</a>
+
+<div><ul><li><ol>i have zero idea of what i'm doing</ol></li></ul></div>
+<div><b><i><li> this is an example of what not to do</li></i></b></div>
+<div><strong><sub><sup>Still have zero idea of what i'm doing</sup></sub></strong></div>
+<div><mark><s><progress>0%</progress></s></progress></mark></div>
