--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
     </nav>
 
     <div class="pseudo2">How OPC affects the blood</div>
-    <a class="pseudo" href="#">Click!</a>
-    <a href="#">Click!</a>
+    <a class="pseudo" href="#">Order Now!</a>
+    <a href="#">Become a Member!</a>
 
 
-    <div>Block-level element</div>
-<div>Block-level element</div>
-<span>Inline element</span>
-<span>Inline element</span>
+   
 
 <h1 class="example"></h1>
 <h2 class="example2"></h2>
@@ -78,7 +75,9 @@
 <!-- using listed an unlisted to differentiate between instructions and benefits.-->
 <h2>Benefits of OPC Factor</h2>
 <section>
-    <a= href "https:www.opcfactor.com"></a>
+    <div>
+    <a= href"www.mycellessentials.com"></a>
+</div>
     <div>
         <a href="https:www.google.com"></a>
     </div>
@@ -116,7 +115,7 @@
         Cell Essentials OPC Factor, a new product from AlivenLabs, acts both as an antioxidant and an immune system boosters. It helps maintain healthy immune system function by restoring cytokine imbalances and increasing white blood cell activity.</p>
     <a href="#">www.mycellessentials.com</a>
     </div>
-    <p class="sample">This is my paragraph</p>
+    <p class="sample">History of OPC's</p>
 
 <!-- Five from Images and audio/vido -->
 <!-- created the pictures with different widege percentages to give dynamic to the page-->
@@ -349,7 +348,20 @@
 
 <p id="container"> </p><b>Drew Pillott</b></p>
 
+<h1 id="container"></h1>
 
+<h6>Members recieve FREE shipping!!!</h6>
+<p>What Makes Us Different: When we first began researching the best antioxidant in 1994, we began with the pine bark from the maritime pine trees. It is equally as important as the grape seed extract including the vitamins, minerals, enzymes, and proprietary blend. The key differences of OPC Factor include:y <br>it has survived
+</p>
+<ul>
+    <li>Effervescent Delivery = More Absorption
+    </li>
+    <li>Blend of vitamins + antioxidants. Exact dosages of each supplement compliments each other - in other words they work together synergistically to enhance the benefits of each other.</li>
+    <li>Quality sourced and tested for potency + the most powerful antioxidants</li>
+    <li>Family Owned = This company cares about you and your health.</li>
+    <li>Taste = our own grandchildren even love the taste.</li>
+    <li>Convenient single-serve pre-measured packets.</li>
+</ul>
 
 
 
@@ -398,20 +410,7 @@
 </p>
 -->
 
-<h1 id="container"></h1>
 
-<h6> this is the smallest headline</h6>
-<p>What Makes Us Different:</p> <br> When we first began researching the best antioxidant in 1994, we began with the pine bark from the maritime pine trees. It is equally as important as the grape seed extract including the vitamins, minerals, enzymes, and proprietary blend. The key differences of OPC Factor include:y <br>it has survived
-
-<ul>
-    <li>Effervescent Delivery = More Absorption
-    </li>
-    <li>Blend of vitamins + antioxidants. Exact dosages of each supplement compliments each other - in other words they work together synergistically to enhance the benefits of each other.</li>
-    <li>Quality sourced and tested for potency + the most powerful antioxidants</li>
-    <li>Family Owned = This company cares about you and your health.</li>
-    <li>Taste = our own grandchildren even love the taste.</li>
-    <li>Convenient single-serve pre-measured packets.</li>
-</ul>
 
 </body>
 </html>I used the following code using javascript-->
