Final Project Updated

--- a/about.html
+++ b/about.html
@@ -15,15 +15,30 @@
       </div>
       
       <div style="padding-left:20px">
-        <h1>Creative Ideas for Musicians</h1>
+        <h1>A Helpful Story For Musicians</h1>
        
       </div>
       <main>
 <body>
 <h2>My Music Life</h2>
 <hr class="rounded">
-<p>I have been in many bands. Music is my passion and currently I aim to minor in music, possibly major if my teacher believes I should. Ever since I was 5 I knew music was my calling. I would lay down underneath the grand piano while my mom was playing. I asked her to teach me when I was five years old and she got me piano lessons. My piano teacher’s daughter played violin and as soon as I heard that I really wanted to learn. That Christmas “Santa” got me an oversized violin. Ha! I went very far with both instruments and would go on to summer music camps at different colleges. The last one I attended was the most difficult to get into and I had to audition to get in, then audition again to be placed either in the orchestra or the symphonic orchestra. I thought I was the best violinist until that year a Amish girl got my first chair position and they put me 2nd chair. At age 12 is when I found the electric guitar. That’s the instrument I taught myself and have written over 50 songs with.</p>
-<hr class="rounded">
+<p class="story">I have been in many bands. Music is my passion and currently I aim to minor in music, possibly major if my teacher believes I should. Ever since I was 5 I knew music was my calling. 
+  I would lay down underneath the grand piano while my mom was playing. I asked her to teach me when I was five years old and she got me piano lessons. My piano teacher’s daughter played violin and as soon as I heard that I really wanted to learn.
+   That Christmas “Santa” got me an oversized violin. Ha! I went very far with both instruments and would go on to summer music camps at different colleges.
+   The last one I attended was the most difficult to get into and I had to audition to get in, then audition again to be placed either in the orchestra or the symphonic orchestra. I thought I was the best violinist until that year a Amish girl got my first chair position and they put me 2nd chair.
+   It was super discouraging but that wasn't my only instrument I was good at because 5 years before that audition placement, at age 12, is when I found the electric guitar. That’s the instrument I taught myself and have written over 50 songs with. I went on to study at the Conservatory of Recording Arts and Sciences,
+  where I am certified in pro tools and logic. I also have certifications in different sound boards and outboard gear. My favorite class was live sournd.
+Setting up the speakers, running the cords, doing sound checks. etc. That's where I belonged, near the stage, the excitement, not the other side of the glass.
+ I had a lot of pressure from my family to continue my education and they were the ones that thought this school would be good for me. If there is one bit of advice I can give it is <b>Never</b>
+ make a decision because your family thinks it's best. Always go with your gut. I ended up getting in a lot of debt for nothing, because when I had finally finished school, they wanted me to intern for free in LA. 
+Ha! There was no way I could afford to live in LA. So I came back to Idaho and the first thing I did was start up another band. I always told myself multiple times a day that I would be successful in music. 
+I had Post-it notes on my mirror reminding me to set my sights towards being a successful musician. Fast forward 15 years and I can tell you this. It's all about who you know. 
+There are hundreds of thousands of talented musicians and yet we have people who use auto-tune topping the charts. All I can say is just have fun. If you're not having fun playing music then you are doing it wrong! 
+Me personally, I love playing music with other people, my band is like my family. I see them just as much and we cam be disfunctional. It's all about the chemistry you have with people. 
+If you are only looking for talented musicians to be in your band it will fail. That's another element to success... you need to find band mates you can shoot the shit with. 
+Now I've had many "band mates" that stabbed me in the back. Another helpful hint... do <b>NOT</b> give band mates money. Everyone should be pitching in fairly. Money is the top contributor to Divorces.
+ Why wouldn't it be the same in a band?! I hope I'm not discouraging you too much. Basically you <i>really</i> have to work hard if you want to be successful. Cheers and remember... HAVE FUN!</p>
+
 <h3>Band's I've Played In</h3>
 <div>
   <ul>
@@ -33,8 +48,9 @@
     <li>Xenom</li>
     <li>Tortured Souls</li>
   </ul>
+
+<img class="about" src="https://media.giphy.com/media/3TQWwQAxsdK2X44kh5/giphy.gif"> 
 </div>
-<hr class="rounded">
 <div>
 <h3>Instruments I Play</h3>
 
@@ -47,14 +63,24 @@
   <li?>Percussion</li>
   <li>Viola</li>
 </ul>
+
+<img class="about" src="https://media.giphy.com/media/W6LoDbFJyXFgYaS2r7/giphy.gif">
 </div>
 <hr class="rounded">
 
-<h4>Most Difficult Song Just Finished Learning!</h4>
+<h6>Most Difficult Song Just Finished Learning!</h6>
 <div>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/I1Yoyz6_Los" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </div>
+<hr class="rounded">
+<footer>
+  <form>
+    <label>Leave A Comment!</label>
+    <input type="text" placeholder="Write your thoughts here!">
+    <input type="submit" value="Submit">
+</form>
+</footer>
 
 
 
