--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
 <div>
     <h4>Contact Me</h4>
 </div>
-<div>
+<div class="contact">
     <address class="address">
        email: <a id="email" href="mailto:drewpillott@u.boisestate.edu">Drew Pillott</a>.<br>
-        Create a Reverb Nation Account!:<br>
-       <a id="linktoreverb" href="http://www.reverbnation.com">reverbnation.com</a><br>
         Eagle Idaho<br>
         USA<br>
-        Phone: 208-921-6260
+        Phone: 208-921-6260 <br>
+        Create a Reverb Nation Account!:<br>
+        <a id="linktoreverb" href="http://www.reverbnation.com">reverbnation.com</a><br>
         </address>
+        </div>
+        <div>
         <h2 class="ideas">What It Takes To Form A Successful Band</h2>
         <p class="ideas">Before you even think about getting members together you need to make sure you have a practice space that will not get you in trouble for noise! Not all neighbors are fans of music or supportive of local bands. So ask your neighbors FIRST before setting up.
            Some Great places in Boise is the Hive and the Boise Bomb Shelter located off of Bogus Basin Rd across from Highlands Elementary. I have rented 3 rooms there in the past 15 years and they have tons of options and tons of rooms, 
@@ -44,34 +46,33 @@
            <h3 class="ideas">Recording</h3>
             <p class="ideas">Once you have a solid set of songs you will want to record them in a professional studio. Everyone thinks they can record themselves… DO NOT DO THAT! It takes years of experience to master tracks, know mic placement, how to set up a recording room and to have the proper mics and vocal booths and drum booths that will give you a clean sound. It will set you apart from so many other local bands who try and record and it turns out sounding worse than recording on your Iphone. Make a demo or if you have enough material make an album! If you are a cover band put together a great list of songs and just get them recorded. You need to have solid recordings if you are going to get gigs.</p>
 </div>
-<hr class="rounded">
 <div class="container">
-   <b>Knitting Factory Best Original Song Contest! Winner: Your's Truely</b>
+   <h3 class="ideas"><b>Knitting Factory Best Original Song Contest! Winner: Yours Truely</b></h3>
     <ul class="image-gallery">
-        <img src="BAND PICS.png" alt="" />
+        <img src="BAND PICS.png" alt="" width="100%" />
         <div class="overlay"><span>Shredding on the Dean</span></div>
     <li>
-        <img src="BAND PICS 2.png">
+        <img src="BAND PICS 2.png" width="60%">
         </li>
         <div class="overlay"><span>Puttin On A Show</span></div>
         <li>
-            <img src="Band PICS 3.png">
+            <img src="Band PICS 3.png" width="100%">
         </li>
-        <div class="overlay"><span>Writing Songs with the Rythem Guitarist</span></div>
+        <div class="overlay"><span>Writing Songs</span></div>
         <li>
-            <img src="band pics 1!.png">
+            <img src="band pics 1!.png" width="65%">
         </li>
         <div class="overlay"><span>Jam Spot</span></div>
         <li>
-            <img src="Band Pics 2!.png">
+            <img src="Band Pics 2!.png" width="55%">
         </li>
-        <div class="overlay"><span>Knitting Factory Has Amazing Sound</span></div>
+        <div class="overlay"><span>Knitting Factory</span></div>
         <li>
-            <img src="Band pics 3!.png">
+            <img src="Band pics 3!.png" width="100%">
         </li>
-        <div class="overlay"><span>Our BEST Practice Spot...<b>The Bomb Shelter</b></span></div>
+        <div class="overlay"><span><b>The Bomb Shelter</b></span></div>
                 <li>
-            <img src="BOMB SHELTER.png">
+            <img src="BOMB SHELTER.png" width="75%">
         </li>
 
     </ul>
