--- a/howto.html
+++ b/howto.html
@@ -23,17 +23,17 @@
        
 
             <h3>Equipment</h3>
-            <h4>Speakers</h4>
+            <h3>Speakers</h3>
             <ul> <li>Passive speakers are the older type of speakers and you will need an amp to power them. Active speakers come with their own power supply (recommended)</li>
             <li>Two 15″ and Two 12″ speakers is a great start. The 15’s will give you the lower sound (I recommend boosting the Low’s on a 5 channel EQ for these) The 12’s will be great for monitors especially so you can hear your vocals (I recommend boosting the mids on a 5 channel EQ for these)</li>
                 </ul>
-            <h4>Microphones</h4>
+            <h3>Microphones</h3>
                 <ul>
                   <li>SM58 Great vocal mic for practicing.</li>
                   <li>SM57’s are the industry standard for recording most mid – high frequency instruments. (guitars, keys, snare drum, toms)</li>
                   <li>Audio Technika makes great low end mics. (bass, kick drum) ALWAYS know your frequency response of your microphones and what you think will work best for what you are going to mic up.</li>
                 </ul>
-            <h4>Misc.</h4>
+            <h3>Misc.</h3>
               <ul>
                 <li>Cords! Speaker/Instrument cords and mic cords LOTS!</li>
                 <li>Instrument Cords- You’ll need one for each of your electronic instruments plus going to your speakers from your mixing board.</li>
@@ -52,3 +52,11 @@
 
       </body>
     </main>
+    <hr class="rounded">
+    <footer>
+      <form>
+        <label>Leave A Comment!</label>
+        <input type="text" placeholder="Write your thoughts here!">
+        <input type="submit" value="Submit">
+    </form>
+    </footer>
