--- a/media.html
+++ b/media.html
@@ -21,7 +21,7 @@
         <hr class="rounded">
        </div>
 <body1>
-       <h3>Check out songs I've written for rock bands! Also check out the classical songs I've learned!</h3>
+       <h3>Check out songs I've written for rock bands! Also check out the classical songs I've learned! I only write the music... If you think you have what it takes to be a vocalist/lyricist then find my contact info on the home page!</h3>
 
        <audio controls>
         <source src="beyond-conviction_journey.mp3">
@@ -44,25 +44,32 @@
 <hr class="rounded">
 
 <p>
-  <iframe width="420" height="315"
+  <iframe width="70%" height="40%"
   src="https://www.youtube.com/embed/fL_ytNECzgc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </iframe>
 </p>
 
 <p>
-  <iframe width="420" height="315"
+  <iframe width="70%" height="40%"
   src="https://www.youtube.com/embed/wMWXVwhfTmk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
 </p>
 
 <p>
-  <iframe width="420" height="315"
+  <iframe width="70%" height="40%"
   src="https://www.youtube.com/embed/U9tWjY-uP2w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   
 </p>
 <div>
-  <img id=image src="Band pics 3!.png"  width="60%">
+  <img id=image src="Band pics 3!.png"  width="100%">
 </div>
-
+<hr class="rounded">
 
 </body1>
+<footer>
+  <form>
+    <label>Leave A Comment!</label>
+    <input type="text" placeholder="Write your thoughts here!">
+    <input type="submit" value="Submit">
+</form>
+</footer>
