final project final edit little type fix and video moved

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 <h2>My Music Life</h2>
 <hr class="rounded">
 <p class="story">I have been in many bands. Music is my passion and currently I aim to minor in music, possibly major if my teacher believes I should. Ever since I was 5 I knew music was my calling. 
-  I would lay down underneath the grand piano while my mom was playing. I asked her to teach me when I was five years old and she got me piano lessons. My piano teacher’s daughter played violin and as soon as I heard that I really wanted to learn.
+  I would lay down underneath the grand piano while my mom was playing. I asked her to teach me when I was five years old and she got me piano lessons. My piano teacher’s daughter played violin and as soon as I heard her play I really wanted to learn.
    That Christmas “Santa” got me an oversized violin. Ha! I went very far with both instruments and would go on to summer music camps at different colleges.
    The last one I attended was the most difficult to get into and I had to audition to get in, then audition again to be placed either in the orchestra or the symphonic orchestra. I thought I was the best violinist until that year a Amish girl got my first chair position and they put me 2nd chair.
    It was super discouraging but that wasn't my only instrument I was good at because 5 years before that audition placement, at age 12, is when I found the electric guitar. That’s the instrument I taught myself and have written over 50 songs with. I went on to study at the Conservatory of Recording Arts and Sciences,
