final final final update last update fixed typo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 
-<p id="box">On this site you will be able to see my resume, what I’m interested in, my passions, and what I’m about! My number one goal in life is to play at Carnegie Hall. Meanwhile I will be taking music classes and private lessons to further my knowledge of music and to be able to share that knowledge with students one day.</p>
+<p id="box">On this site you will be able to see what I’m interested in, my passions, and what I’m about! My number one goal in life is to play at Carnegie Hall. Meanwhile I will be taking music classes and private lessons to further my knowledge of music and to be able to share that knowledge with students one day.</p>
 <div>
     <h4>Contact Me</h4>
 </div>
